--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VUE_APP_BASE_URL="http://192.168.208.110/api"
+#VUE_APP_BASE_URL="http://192.168.208.110/api"
+VUE_APP_BASE_URL="http://localhost/api"
